@@ -1,5 +1,13 @@
 2005-08-09  Ross Burton  <ross@burtonini.com>
 
+	* autogen.sh:
+	Use automake 1.9 like all the cool kids.
+
+	* Makefile.am:
+	Don't dist m4/.
+
+2005-08-09  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* NEWS:
 	Versoin 2.11.91.
